--- a/CALC.html
+++ b/CALC.html
@@ -9,35 +9,35 @@
   <body>  
     <table id="calctable">
       <tr>
-      <td colspan="4"><input type="text" id="display" value="0" disabled></td>
+        <td colspan="4"><div id="output_total" class="output">0</td>
       </tr>
       <tr>
-      <td><button class="btn" onclick="calc('7')">7</button></td>
-      <td><button class="btn" onclick="calc('8')">8</button></td>
-      <td><button class="btn" onclick="calc('9')">9</button></td>
-      <td><button class="btn" onclick="calc('+')">+</td>
+        <td><button class="num_btn one_nine" data-index-id=7>7</button></td>
+        <td><button class="num_btn one_nine" data-index-id=8>8</button></td>
+        <td><button class="num_btn one_nine" data-index-id=9>9</button></td>
+        <td><button class="num_btn operator" data-index-id='+'>+</button></td>
       </tr>
       <tr>
-      <td><button class="btn" onclick="calc('4')">4</button></td>
-      <td><button class="btn" onclick="calc('5')">5</button></td>
-      <td><button class="btn" onclick="calc('6')">6</button></td>
-      <td><button class="btn" onclick="calc('-')">-</button></td>
+        <td><button class="num_btn one_nine" data-index-id=4>4</button></td>
+        <td><button class="num_btn one_nine" data-index-id=5>5</button></td>
+        <td><button class="num_btn one_nine" data-index-id=6>6</button></td>
+        <td><button class="num_btn operator" data-index-id='-'>-</button></td>
       </tr>
       <tr>
-      <td><button class="btn" onclick="calc('1')">1</button></td>
-      <td><button class="btn" onclick="calc('2')">2</button></td>
-      <td><button class="btn" onclick="calc('3')">3</button></td>
-      <td><button class="btn" onclick="calc('*')">*</button></td>
+        <td><button class="num_btn one_nine" data-index-id=1>1</button></td>
+        <td><button class="num_btn one_nine" data-index-id=2>2</button></td>
+        <td><button class="num_btn one_nine" data-index-id=3>3</button></td>
+        <td><button class="num_btn operator" data-index-id='*'>×</button></td>
       </tr>
       <tr>
-      <td><button class="btn" onclick="calc('0')">0</button></td>
-      <td><button class="btn" onclick="calc('00')">00</button></td>
-      <td><button class="btn" onclick="calc('.')">.</button></td>
-      <td><button class="btn" onclick="calc('/')">/</button></td>
+        <td><button class="num_btn" id="zero" data-index-id=0>0</button></td>
+        <td><button class="num_btn" id="w_zero" data-index-id=00>00</button></td>
+        <td><button class="num_btn" id="point" data-index-id=.>.</button></td>
+        <td><button class="num_btn operator" data-index-id='/'>÷</button></td>
       </tr>
       <tr>
-      <td colspan="2"><button class="btn_2" onclick="calc('AC')">AC</button></td>
-      <td colspan="2"><button class="btn_2" onclick="calc('=')">=</button></td>
+        <td colspan="2"><button id="clear">AC</button></td>
+        <td colspan="2"><button id="equal_btn">=</button></td>
       </tr>
     </table>
     <script src="CALC.js"></script>
